Changed name to one more turn frontend.

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slicks-slices-frontend",
+  "name": "one-more-turn-frontend",
   "private": true,
   "description": "Slick Serves the Sweetest Slices",
   "version": "0.1.0",
